change diploma, add dockerfile